move contact to another block

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
                   </div>
                   <span>Lviv, Ukraine</span>
                 </a>
+              </div>
+              <div class="contact-info__block contact-info__block--center">
+                <img
+                  class="contact-info__avatar"
+                  src="assets/avatar.png"
+                  alt="Avatar"
+                />
+              </div>
+
+              <div class="contact-info__block">
                 <a
                   href="https://ua.linkedin.com/company/binary-studio_241166"
                   rel="author"
@@ -49,15 +59,6 @@
                   <span>binary-studio</span>
                 </a>
               </div>
-              <div class="contact-info__block contact-info__block--center">
-                <img
-                  class="contact-info__avatar"
-                  src="assets/avatar.png"
-                  alt="Avatar"
-                />
-              </div>
-
-              <div class="contact-info__block"></div>
             </div>
           </div>
         </div>
