changed summary and skills

--- a/index.html
+++ b/index.html
@@ -103,9 +103,15 @@
                 </svg>
               </div>
               <p class="intro_text">
-                Meow. I am a Binary Studio cat. Still got 7 lives. Work in IT,
-                Full Stack Evil, all I do is sleep and try to help out hoomans
-                with their projects whenever they need me.
+                I am a JavaScript Developer with over 1.5 years of hands-on
+                experience in developing web applications using various
+                technologies. My primary focus is on React.js and TypeScript,
+                and I am always eager to take on new challenges. I have a strong
+                ability to write well-structured and reusable code. I have a
+                passion for staying updated with the latest technologies and
+                enjoy implementing them in practical projects. As a team player,
+                I possess excellent communication skills and actively seek to
+                stay informed about modern solutions and industry trends.
               </p>
             </div>
           </div>
@@ -115,7 +121,9 @@
             <div class="skills">
               <h3 class="skills__header">Skills</h3>
               <p class="skills__text">
-                Sleep, eat, more sleep, meow, mrrr, purr.
+                JavaScript, React.js, Typescript, NodeJs,
+                Express.js,React-Native, HTML, CSS, SCSS, MySQL, MongoDB,
+                Sequelize, Mongoose, Git, GitHub, Material UI, Redux-toolkit
               </p>
             </div>
           </div>
