--- a/index.html
+++ b/index.html
@@ -207,7 +207,6 @@
                     </p>
                   </div>
                 </div>
-
                 <div class="additional-info__languages">
                   <h3 class="additional-info__languages-header">Languages</h3>
                   <p class="additional-info__languages-item">
@@ -224,7 +223,21 @@
             </div>
           </div>
         </div>
+        <div class="container">
+          <div class="timeline">
+            <h3 class="timeline__header">Timeline</h3>
+            <ul class="timeline__years">
+              <li class="timeline__years-item">2019</li>
+              <li class="timeline__years-item">2020</li>
+              <li class="timeline__years-item">2021</li>
+              <li class="timeline__years-item">2022</li>
+              <li class="timeline__years-item">2023</li>
+            </ul>
+            <div class="timeline__info"></div>
+          </div>
+        </div>
       </div>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
