--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 />
               </div>
 
-              <div class="contact-info__block contact-info__block">
+              <div class="contact-info__block">
                 <a href="" rel="author" class="contact-info__item">
                   <div class="contact-info__item-icon-wrapper">
                     <i class="fa-solid fa-calendar"></i>
